--- a/laurentperez.fr/meetup/rv/index.html
+++ b/laurentperez.fr/meetup/rv/index.html
@@ -33,41 +33,41 @@
 					<h2>Toi, public</h2>
 					<p>Qui fait du front/UI/animation/print/TV ?</p>
 					<p>Ratio natif iOS/Android (hors WebViews) &amp; web/print/vidéo ?</p>
+					<p>Exemples de dernières demandes créas complexes ?</p>
 				</section>
 
-				<section>
+			<section>
 				<h2>✨ CSS Houdini ✨</h2>
 				<p class="fragment fade-up">tl;dr : pour un accès direct au moteur CSS via JS</p>
 				<p class="fragment fade-up">fini les hacks, on a un véritable accès au moteur</p>
 				<p class="fragment fade-up">on peut créer nos propriétés, peinture, animation, layout</p>
 				<p class="fragment fade-up">travail commencé circa 2016</p>
 				<p  class="fragment fade-up">suite logique du travail après WebComponents et ServiceWorkers</p>
-				</section>
-
-				<section>
-					<h2>Motivations</h2>
-					<p>Ouvrir les portes de la "magie" CSS et pouvoir étendre le moteur sans attendre les fabricants ou ticket les librairies tierces</p>
-					<small>Arrêter les hacks JS à base de addClass/el.style/translate3D(0,0,0)</small>
-					<p>Séparer logique (JS) et style (CSS)</p>
-					<p>Garantir du rendu à 60fps hors thread UI principale</p>
-					
-					<p>Task force Google, Mozilla, Apple</p>
-					<small>hacks JS = parce qu'on n'a pas le choix</small>
-				</section>
+			</section>
 
 			<section>
-					<p>Division en 6 grandes APIs</p>
-					<p>https://github.com/w3c/css-houdini-drafts (repo des specs)</p>
-					<p>https://drafts.css-houdini.org (specs)</p>
-					<ul>
-							<li class="fragment fade-up">CSSOM API (CAPI)</li>
-							<li class="fragment fade-up">Properties/Values API (PVAPI)</li>
-							<li class="fragment fade-up">Paint API (PAPI)</li>
-							<li class="fragment fade-up">Web Animation API (WAAPI)</li>
-							<li class="fragment fade-up">Layout API (LAPI) *</li>
-							<li class="fragment fade-up">Font Metrics API (FMAPI) *</li>
-						</ul>
-						<small>* = pas encore d'implémentation stable</small>
+				<h2>Motivations</h2>
+				<p  class="fragment fade-up">Ouvrir les portes de la "magie" CSS et pouvoir étendre le moteur sans attendre les fabricants ou ticket les librairies tierces</p>
+				<small  class="fragment fade-up">Arrêter les hacks JS à base de addClass/el.style/translate3D(0,0,0)</small>
+				<p  class="fragment fade-up">Séparer logique (JS) et style (CSS)</p>
+				<p  class="fragment fade-up">Garantir du rendu à 60fps hors thread UI principale</p>
+				<p>Task force Google, Mozilla, Apple</p>
+				<small  class="fragment fade-up">hacks JS = parce qu'on n'a pas le choix</small>
+			</section>
+
+			<section>
+				<p>Division en 6 nouvelles grandes APIs</p>
+				<p>https://github.com/w3c/css-houdini-drafts (repo des specs)</p>
+				<p>https://drafts.css-houdini.org (specs)</p>
+				<ul>
+					<li class="fragment fade-up">CSSOM API (CAPI)</li>
+					<li class="fragment fade-up">Properties/Values API (PVAPI)</li>
+					<li class="fragment fade-up">Paint API (PAPI)</li>
+					<li class="fragment fade-up">Web Animation API (WAAPI)</li>
+					<li class="fragment fade-up">Layout API (LAPI)</li>
+					<li class="fragment fade-up">Font Metrics API (FMAPI) *</li>
+					</ul>
+				<small>* = pas encore d'implémentation visible</small>
 			</section>
 
 			<section>
@@ -105,10 +105,10 @@ new CSSStyleValue.parse('transform', 'translate4d(...)'); // throw
 			</section>
 
 			<section>
-				<h2>Properties/Values API 🔑</h2>
-				<p>De la structure/typage dans des variables CSS custom</p>
+				<h2>🔑 Properties/Values API 🔑</h2>
+				<p >De la structure/typage dans des variables CSS custom</p>
 				<small>... on rappelle BEM/SASS/Less pour une structure de classes maintenable</small>
-				<p class="fragment fade-up">Types supportés : length, number, %, color, image, url(), integer, angle, time, resolution, transform</p>
+				<p class="fragment fade-up">Types supportés : length, number, %, color, image, url(), integer, angle, time, dpi, transform</p>
 				<pre class="fragment fade-up"><code class="css">
 CSS.registerProperty({
 		name: '--sky',
@@ -116,11 +116,11 @@ CSS.registerProperty({
 		inherits: true,
 		initialValue: 'vanilla',
 });</code></pre>
-				<small>SVP ne pas réinventer des horreurs lexicales comme couleur=color, ni substituer aux data-* HTML5</small>
+				<small>SVP ne pas réinventer des horreurs lexicales comme couleur=color, ni substituer aux meta data-* HTML5</small>
 				<p>demo</p>
 			</section>
 
-			<section><h2>Paint API 🎨</h2>
+			<section><h2>🎨 Paint API 🎨</h2>
 				<p>Dessin 2D personnalisé avec <em>background:paint('foo');</em></p>
 				<p>Introduction de <em>PaintWorklet</em> : analogie avec les <em>ServiceWorkers</em> pour le cache/offline/push notifs</p>
 				<p class="fragment fade-up">Une <em>Worklet</em> est un JS short-lived, déplaçable entre threads au gré du moteur</p>
@@ -131,48 +131,48 @@ CSS.registerProperty({
 			</section>
 
 			<section>
-				<h2>Quelques remarques</h2>
-				<p>lire https://github.com/w3c/css-houdini-drafts/issues</p>
+				<h2>Sécurité</h2>
+				<p>lire aussi https://github.com/w3c/css-houdini-drafts/issues</p>
 				<ul>
-					<li>Par sécurité, aucun accès au DOM. Le Canvas est étanche. Si besoin de DOM, alors faire un Canvas classique</li>
-					<li>Tu n'as pas spécialement envie qu'un Canvas chargé depuis JS/CSS <em>externe</em> puisse lire ou repeindre des éléments du DOM</li>
+					<li>Aucun accès au DOM. Le Canvas est étanche. Si besoin de DOM, alors faire un Canvas classique sans Paint API</li>
+					<li>Car tu n'as pas spécialement envie qu'un Canvas chargé depuis JS/CSS <em>externe</em> puisse lire ou repeindre des éléments du DOM</li>
 					<li>exemple : redessiner champ input de saisie de CB</li>
 				</ul>
 				<img src="gifhack.gif" width="200px" style="border: none;" alt="">
 			</section>
 
 			<section>
-				<p>Values trop simples ? Comment passer des avancées ?</p>
+				<p>Values trop simples ? Comment passer des complexes ?</p>
 				<p>exemple : un stream audio/vidéo/trading/ECU (data automobile) </p>
 				<p>cheap solution (Juin 2019) : ajouter un type &lt;blob&gt;</p>
 				<p>https://github.com/w3c/css-houdini-drafts/issues/872</p>
-				<p>postMessage pour plus tard pour pas repasser la Value dans la main thread</p>
+				<p>puis <em>postMessage</em> plus tard pour pas devoir repasser la Value dans la main thread</p>
 				<p>valable aussi pour AnimationWorklet :</p>
 			</section>
 
 			<section>
-					<h2>Web Animations API 🎬</h2>
-					<p>Animations non blocking à 60fps relatives à la timeline et au scroll
-					... c'est surtout fait pour le scroll, et ça le fait bien</p>
-					<small>qui a déjà fait des parallaxes fluides ? des offsets / staggering ?</small>
-					<p><em>AnimationWorklet/KeyFrameEffect</em>, avec état pour se souvenir si le moteur stoppe la Worklet</p>
-					<p>Limite actuelle : séquence/chorégraphie à faire à la main. Un peu pénible, car <em>GroupEffect</em> dans la spec</p>
-					<p>demo</p>
+				<h2>🎬 Web Animations API 🎬</h2>
+				<p>Animations non blocking à 60fps relatives à la timeline et au scroll
+				... c'est surtout fait pour le scroll, et ça le fait bien</p>
+				<small>qui a déjà fait des parallaxes fluides ? des offsets / staggering ?</small>
+				<p><em>AnimationWorklet/KeyFrameEffect</em>, avec état pour se souvenir si le moteur stoppe la Worklet</p>
+				<p>Limite actuelle : séquence/chorégraphie à faire à la main. Un peu pénible, car <em>GroupEffect</em> dans la spec</p>
+				<p>demo</p>
 			</section>
 
 			<section>
-					<p>Sprints et roadmap : https://www.chromium.org/teams/animations/animation-objectives</p>
-					<p>Pour le moment (Août), <em>GroupEffect</em> = enchaînement de <em>>KeyFrameEffects</em> est désactivé</p>
-					<p>exemple : démarrer l'animation B quand la A est à 50%, démarrer A, B, C, D en même temps mais avec des offsets (= parallaxe/stagger)</p>
-					<small>Travail important de Yi Gu sur la Chorégraphie, Séquence et Staggering pour améliorer la spec</small>
+				<p>Sprints et roadmap : https://www.chromium.org/teams/animations/animation-objectives</p>
+				<p>Pour le moment (Août), <em>GroupEffect</em> = enchaînement de <em>>KeyFrameEffects</em> est désactivé</p>
+				<p>exemple : démarrer l'animation B quand la A est à 50%, démarrer B, C, D en même temps mais avec des offsets (= parallaxe/stagger)</p>
+				<small>Travail important de Yi Gu sur la Chorégraphie, Séquence et Staggering pour améliorer la spec</small>
 			</section>
 			<section>
-					<img src="pigeon.gif" alt="">
-					<small>https://github.com/yi-gu/group_effect</small>
-					<p>Q1 2020</p>
+				<img src="pigeon.gif" alt="">
+				<small>lire https://github.com/yi-gu/group_effect</small>
+				<p>Q1 2020</p>
 			</section>
 
-			<section><h2>Layout API 🖼️</h2>
+			<section><h2>🖼️ Layout API 🖼️</h2>
 				<p>Quand flex ou grid ne suffisent plus (oui oui)</p>
 				<p>tl;dr : écrire son propre display:layout('monlayout');</p>
 				<p>https://houdini.glitch.me/layout</p>
@@ -195,26 +195,26 @@ CSS.registerProperty({
 			</section>
 
 			<section>
-				<h2>Font Metrics API 🔠</h2>
+				<h2>🔠 Font Metrics API 🔠</h2>
 				<p>... spec causée par la Layout API :</p>
 				<p>dessiner des blocs custom c'est cool mais : on a parfois besoin de gérer du texte dedans</p>
-				<small>exemples : faire son propre line-breaking, connaître la baseline dans un Fragment, les tailles réelles des symboles math chimie, des ligatures Œ, Æ, محرك, et cætera … &lt;- c'est des points de suspension, pas '...' </small>
-				<p>exposer seulement la font ne suffit pas : il faut descendre au niveau du <em>glyphe</em> dessiné par chaque navigateur</p>
+				<small>ex : faire son propre line-breaking, connaître la baseline dans un Fragment, les tailles réelles des symboles math chimie, des ligatures Œ, Æ, محرك, et cætera … &lt;- c'est des points de suspension, pas '...' </small>
+				<p>exposer seulement la Font ne suffit pas : il faut descendre au niveau du <em>glyphe</em> dessiné par chaque navigateur</p>
 			</section>
 				
 			<section>
 				<h2>Démo avancées</h2>
-				<p>avec Chrome Canary, Safari Technology Preview ou Firefox Aurora</p>
+				<p>avec Chrome Canary, Safari Technology Preview ou Firefox Nightly (peu d'implémenté)</p>
 				<p>https://css-houdini.rocks</p>
 				<p>notamment : Inner Borders, Masonry, Random Bubble Masks</p>
 			</section>
 
 			<section>
 				<h2>Pour suivre / plus loin</h2>
-				<p>https://www.chromium.org/teams (rétros 'agiles')</p>
 				<p>https://github.com/w3c/css-houdini-drafts/wiki/Meeting-Planning-Pages (meetings trimestriels CSSWG)</p>
+				<p>https://www.chromium.org/teams (rétros agiles)</p>
 				<p>https://houdini.glitch.me (démos)</p>
-				<p>2020, rapprochement de Paint API et Web Animations API :</p>
+				<p>Q2 2020, rapprochement de Paint API et Web Animations API :</p>
 				<p>On peut imaginer un IDE en ligne 100% web, gratuit et open source qui remplacerait Sketch/Adobe XD, 100% extensible car basé sur des APIs ouvertes</p>
 				<p>Plus de "on peut pas le faire en CSS" : mais ça va demander des compétences de dessin canvas2D et animation... FullFullStack ?</p>
 			</section>
