--- a/laurentperez.fr/talks/rv/cssp/index.html
+++ b/laurentperez.fr/talks/rv/cssp/index.html
@@ -59,3 +59,11 @@
   CSS.paintWorklet.addModule('meetup.js');
   CSS.paintWorklet.addModule('under.js');
 </script>
+<script>
+  /*
+document.addEventListener('mousemove', function (e) {
+  console.log(Math.round(e.screenX / 100));
+  document.querySelector('.hotel').style.setProperty('--ranking', Math.round(e.screenX / 100))
+});
+*/
+</script>
