--- a/laurentperez.fr/talks/rv/index.html
+++ b/laurentperez.fr/talks/rv/index.html
@@ -88,6 +88,8 @@
 			<section>
 				<p>Chromium (Blink) lead, Safari TP (WebKit) suit</p>
 				<p>Firefox (Servo) est à la bourre</p>
+				<p>lire les questions sur https://github.com/w3c/css-houdini-drafts/issues</p>
+				<p>réponses des auteurs de specs et fabricants</p>
 			</section>
 			
 			<section>
@@ -135,13 +137,11 @@ CSS.registerProperty({
 
 			<section>
 				<h2>Sécurité</h2>
-				<p>lire aussi https://github.com/w3c/css-houdini-drafts/issues</p>
 				<ul>
 					<li>Aucun accès au DOM. Le Canvas est étanche. Si besoin de DOM, faire un Canvas classique sans Paint API</li>
 					<li>Car tu n'as pas spécialement envie qu'un Canvas chargé depuis JS/CSS <em>externe</em> puisse lire ou repeindre des éléments du DOM</li>
 					<li>exemple : redessiner champ input de saisie de CB</li>
 					<li>c'est un <em>PaintRenderingContext2D</em> subset de <em>CanvasRenderingContext2D</em></li>
-					<small>https://github.com/w3c/css-houdini-drafts/issues/20</small>
 				</ul>
 				<img src="gifhack.gif" width="200px" style="border: none;" alt="">
 			</section>
@@ -173,7 +173,7 @@ CSS.registerProperty({
 			</section>
 			<section>
 				<img src="pigeon.gif" alt="">
-				<small>lire https://github.com/yi-gu/group_effect</small>
+				<p>lire les travaux de Yi sur https://github.com/yi-gu/group_effect</p>
 				<p>Q1 2020</p>
 			</section>
 
