--- a/laurentperez.fr/talks/rv/index.html
+++ b/laurentperez.fr/talks/rv/index.html
@@ -63,7 +63,7 @@
 					<li class="fragment fade-up">CSSOM API (CAPI)</li>
 					<li class="fragment fade-up">Properties/Values API (PVAPI)</li>
 					<li class="fragment fade-up">Paint API (PAPI)</li>
-					<li class="fragment fade-up">Web Animation API (WAAPI)</li>
+					<li class="fragment fade-up">Worklet Animation API (WAPI)</li>
 					<li class="fragment fade-up">Layout API (LAPI)</li>
 					<li class="fragment fade-up">Font Metrics API (FMAPI) *</li>
 					</ul>
@@ -130,7 +130,7 @@ CSS.registerProperty({
 				<p>Introduction de <em>PaintWorklet</em> : analogie avec les <em>ServiceWorkers</em> pour le cache/offline/push notifs</p>
 				<p class="fragment fade-up">Une <em>Worklet</em> est un JS short-lived, déplaçable entre threads au gré du moteur</p>
 				<p class="fragment fade-up">But : qu'elle ne tourne pas dans la main thread (main JS sur thread UI sans rAf = lag) mais dans une autre thread</p>
-				<p class="fragment fade-up">La Paint API donne un <em>Canvas</em> (2DContext) sans accès au DOM</p>
+				<p class="fragment fade-up">La Paint API donne un subset <em>Canvas</em> sans accès au DOM</p>
 				<small class="fragment fade-up">donc oui le 31/10 tu peux faire background:paint(🎃);</small>
 				<p>demo</p>
 			</section>
@@ -156,13 +156,20 @@ CSS.registerProperty({
 			</section>
 
 			<section>
-				<h2>🎬 Web Animations API 🎬</h2>
+				<h2>🎬 Worklet Animation API 🎬</h2>
 				<p>Animations non blocking à 60fps relatives à la timeline et au scroll
 				... c'est surtout fait pour le scroll, et ça le fait bien</p>
 				<small>qui a déjà fait des parallaxes fluides ? des offsets / staggering ?</small>
-				<p><em>AnimationWorklet/KeyFrameEffect</em>, avec état pour se souvenir si le moteur stoppe la Worklet</p>
+				<p>Syntaxe : <em>AnimationWorklet/KeyFrameEffect</em></p>
 				<p>Limite actuelle : séquence/chorégraphie à faire à la main. Un peu pénible, car <em>GroupEffect</em> dans la spec</p>
 				<p>demo</p>
+			</section>
+			<section>
+				<p>Encore une API d'animation ?</p>
+				<small>... on a déjà CSS transitions, animations, Web Animations API</small>
+				<p>La Worklet est une extension de WAAPI qui donne un état (stateful) et des timelines libres (dont une ScrollTimeline)</p>
+				<p>ex: se souvenir de l'état quand le moteur bouge la Worklet entre threads</p>
+				<p>ex: accélérer/distordre le temps (document.timeline = msec)</p>
 			</section>
 
 			<section>
