--- a/laurentperez.fr/talks/waapi/index.html
+++ b/laurentperez.fr/talks/waapi/index.html
@@ -1,16 +1,3 @@
-<!--
- * Copyright 2018 Google Inc. All Rights Reserved.
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *     http://www.apache.org/licenses/LICENSE-2.0
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
--->
-
 <!doctype html>
 <style>
   body {
@@ -19,7 +6,7 @@
   }
   #header {
     width: 100%;
-    height: 200px;
+    height: 150px;
     background-color: hotpink;
     position: fixed;
     transform-origin: top;
@@ -32,7 +19,6 @@
     background-color: blue;
     position: fixed;
     transform-origin: top right;
-
     top:0;
     right:0;
   }
@@ -56,6 +42,13 @@ position: absolute;
 bottom: 0;
 right: 0;
   }
+  #progress {
+    width: 200px;
+    height: 30px;
+    background: red;
+    position: absolute;
+    top:380px;
+  }
 </style>
 <body>
   <div id="flamingo" >
@@ -66,169 +59,37 @@ right: 0;
     <input type="text" value="hello">
   </form>
 </div>
-<div id="other">
-  </div>
-<main>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-  scroll me<br>
-</main>
-<script language="javascript+animationworklet">
+<div id="other"></div>
+<div id="progress"></div>
+
+<script language="meetup">
   /* on enregistre nos AnimationWorklets */
   registerAnimator('superscroll', class {
     animate(currentTime, effect) {
       effect.localTime = currentTime;
     }
   });
-  registerAnimator('superfade', class {
+  registerAnimator('scrollfade', class {
     animate(currentTime, effect) {
       effect.localTime = currentTime;
     }
   });
+  registerAnimator('progress', class {
+    constructor(options = {}, color = {}) {
+    this.color = 'green' || (Math.random() > 0.5 ? 'red' : 'yellow');
+  }
+    animate(currentTime, effect) {
+      effect.localTime = currentTime;
+    }
+    destroy() {
+    return {
+      color: this.color
+    };
+  }
+  });
 </script>
 <script>
-  if(!('animationWorklet' in CSS)) {
-    document.write("You need AnimationWorklet to see this demo :(");
-  }
-  
+
   function urlFromTag(sel) {
     const el = document.querySelector(sel);
     const blob = new Blob([el.textContent], {type: "text/javascript"});
@@ -236,19 +97,12 @@ right: 0;
   }
 
   async function init() {
-    await CSS.animationWorklet.addModule(urlFromTag("script[language='javascript+animationworklet']"));
+    await CSS.animationWorklet.addModule(urlFromTag("script[language='meetup']"));
     new WorkletAnimation(
       'superscroll',
       new KeyframeEffect(
         document.querySelector('#header'), 
-        [
-          {
-            transform: 'scale(1.0,1.0)'
-          },
-          {
-            transform: 'scale(1.0,0.2)'
-          }
-        ],
+        [{transform: 'scale(1.0,1.0)'},{transform: 'scale(1.0,0.2)'}],
         {
           duration: 2000, 
           fill: 'both'
@@ -264,7 +118,7 @@ right: 0;
       })
     ).play();
     new WorkletAnimation(
-      'superfade',
+      'scrollfade',
       new KeyframeEffect(document.querySelector('#other'),
                     [{opacity: 0}, {opacity: 1}],
                     {duration: 2000, iterations: 1}),
@@ -273,6 +127,22 @@ right: 0;
         orientation: "vertical",
         timeRange: 2000
         /* on laisse fader jusqu'à aligner à 2000 */
+      })
+    ).play();
+    new WorkletAnimation(
+      'progress',
+      new KeyframeEffect(
+        document.querySelector('#progress'), 
+        [{width: 0, background:'green'}, {width: CSS.px(document.body.clientWidth), background:'red'}],
+        {
+          duration: 2000, 
+          fill: 'both'
+        }
+      ),
+      new ScrollTimeline({
+        scrollSource: document.querySelector("main"), 
+        orientation: "vertical",
+        timeRange: 2000
       })
     ).play();
   }
@@ -306,6 +176,149 @@ right: 0;
   scroll me<br>
   scroll me<br>
   scroll me<br>
+  <main>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+      scroll me<br>
+    </main>
   scroll me<br>
   scroll me<br>  scroll me<br>
   scroll me<br>
