--- a/laurentperez.fr/talks/rv/index.html
+++ b/laurentperez.fr/talks/rv/index.html
@@ -156,6 +156,19 @@ CSS.registerProperty({
 			</section>
 
 			<section>
+				<p>background:paint('488GT3'); background:paint('motec');</p>
+				<pre class="fragment fade-up"><code class="css">
+--gear:3;
+--speed:81;
+--pos:16;
+--laptime:7.28;
+--rpm:6000;
+				</code></pre>
+				<img src="488.jpeg" width="350px" alt="" style="border:none">
+				<img src="motec.jpeg" width="350px" alt="" style="border:none">
+			</section>
+
+			<section>
 				<h2>🎬 Worklet Animation API 🎬</h2>
 				<p>Animations non blocking à 60fps relatives à la timeline et au scroll
 				... c'est surtout fait pour le scroll, et ça le fait bien</p>
