--- a/laurentperez.fr/talks/rv/index.html
+++ b/laurentperez.fr/talks/rv/index.html
@@ -78,18 +78,19 @@
 					<li>CSSOM : shipped Chrome, ii FF, in dev SF</li>
 					<li>Properties Values API : partial 90% Chrome/SF, in dev FF</li>
 					<li>Paint API : shipped Chrome, ii FF, in dev SF</li>
-					<li>Animation API : partial 80% Chrome (sans chorégraphie, Q1 2020)</li>
-					<li>Layout API : très partial Chrome, ii FF</li>
+					<li>Worklet Animation API : partial 80% Chrome (sans chorégraphie, Q1 2020)</li>
+					<li>Layout API : partial 50% Chrome, ii FF</li>
 					<li>Font Metrics API : rien, uniquement les specs</li>
 				</ul>
 				<small>ii : Intent to Implement, in dev : partial, en cours : Safary Technology Preview, Chrome Canary</small>
 			</section>
 
 			<section>
-				<p>Chromium (Blink) lead, Safari TP (WebKit) suit</p>
-				<p>Firefox (Servo) est à la bourre</p>
+				<p>Chromium (Blink) et Safari (WebKit) lead</p>
+				<p>Firefox (Servo) est à la bourre. IE va utiliser Blink (M78)</p>
 				<p>lire les questions sur https://github.com/w3c/css-houdini-drafts/issues</p>
 				<p>réponses des auteurs de specs et fabricants</p>
+				<p>Important : WAAPI à 100% dans Safari TP / iOS13 (sans Worklet), 80% CR FF</p>
 			</section>
 			
 			<section>
@@ -156,13 +157,13 @@ CSS.registerProperty({
 			</section>
 
 			<section>
-				<p>background:paint('488GT3'); background:paint('motec');</p>
+				<p>Skins : background:paint('488GT3'); background:paint('motec');</p>
 				<pre class="fragment fade-up"><code class="css">
---gear:3;
---speed:81;
---pos:16;
---laptime:7.28;
---rpm:6000;
+--gear: 3;
+--speed: 81;
+--pos: 16;
+--laptime: 7.28;
+--rpm: 6000;
 				</code></pre>
 				<img src="488.jpeg" width="350px" alt="" style="border:none">
 				<img src="motec.jpeg" width="350px" alt="" style="border:none">
@@ -174,7 +175,7 @@ CSS.registerProperty({
 				... c'est surtout fait pour le scroll, et ça le fait bien</p>
 				<small>qui a déjà fait des parallaxes fluides ? des offsets / staggering ?</small>
 				<p>Syntaxe : <em>AnimationWorklet/KeyFrameEffect</em></p>
-				<p>Limite actuelle : séquence/chorégraphie à faire à la main. Un peu pénible, car <em>GroupEffect</em> dans la spec</p>
+				<p>Note : séquence/chorégraphie à faire à la main. Un peu pénible, car <em>GroupEffect</em> dans la spec</p>
 				<p>demo</p>
 			</section>
 			<section>
@@ -182,7 +183,7 @@ CSS.registerProperty({
 				<small>... on a déjà CSS transitions, animations, Web Animations API</small>
 				<p>La Worklet est une extension de WAAPI qui donne un état (stateful) et des timelines libres (dont une ScrollTimeline)</p>
 				<p>ex: se souvenir de l'état quand le moteur bouge la Worklet entre threads</p>
-				<p>ex: accélérer/distordre le temps (document.timeline = msec)</p>
+				<p>ex: accélérer/distordre le temps (document.timeline modifiable)</p>
 			</section>
 
 			<section>
@@ -209,7 +210,6 @@ CSS.registerProperty({
 			</section>
 
 			<section>
-				<p>c'est un peu plus riche que les autres API</p>
 				<p>penser à Tetris : une disposition de blocs dans un espace constraint</p>
 				<p>display:layout('L'); display:layout('4bar'); ▛ ▚ ▐</p>
 				<small>4bar est ici 4 Fragments empilés, L 3 et le 4e a un offset</small>
