--- a/laurentperez.fr/talks/rv/index.html
+++ b/laurentperez.fr/talks/rv/index.html
@@ -123,7 +123,7 @@ CSS.registerProperty({
 		initialValue: 'vanilla',
 });</code></pre>
 				<small>SVP ne pas réinventer des horreurs lexicales comme couleur=color, ni substituer aux meta data-* HTML5</small>
-				<p>demo</p>
+				<p><a href="../cssp">demo</a></p>
 			</section>
 
 			<section><h2>🎨 Paint API 🎨</h2>
@@ -133,7 +133,7 @@ CSS.registerProperty({
 				<p class="fragment fade-up">But : qu'elle ne tourne pas dans la main thread (main JS sur thread UI sans rAf = lag) mais dans une autre thread</p>
 				<p class="fragment fade-up">La Paint API donne un subset <em>Canvas</em> sans accès au DOM</p>
 				<small class="fragment fade-up">donc oui le 31/10 tu peux faire background:paint(🎃);</small>
-				<p>demo</p>
+				<p><a href="../cssp">demo</a></p>
 			</section>
 
 			<section>
@@ -176,7 +176,7 @@ CSS.registerProperty({
 				<small>qui a déjà fait des parallaxes fluides ? des offsets / staggering ?</small>
 				<p>Syntaxe : <em>AnimationWorklet/KeyFrameEffect</em></p>
 				<p>Note : séquence/chorégraphie à faire à la main. Un peu pénible, car <em>GroupEffect</em> dans la spec</p>
-				<p>demo</p>
+				<p><a href="../waapi">demo</a></p>
 			</section>
 			<section>
 				<p>Encore une API d'animation ?</p>
@@ -216,7 +216,7 @@ CSS.registerProperty({
 				<p>Les blocs Fragments sont _parallélisables_ pour les moteurs next-gen (LayoutNG CR, WebRender FF) : quand le 4bar rentre et 'flashe' un Tetris, 4 lignes sont à effacer, et y-4 pour au dessus</p>
 				<p>Cas d'usage : architecture, UI normés (affichage dash militaire/voiture/avion, presse écrite, eBooks, ePub Comics)</p>
 				<small>des utilisaturs.trices de QuarkXPress/InDesign ?</small>
-				<p>demo / illustrations</p>
+				<p><a href="https://css-houdini.rocks/masonry/">demo</a></p>
 			</section>
 
 			<section>
