--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -427,7 +427,6 @@
 					<p>TODO Montrer le code XCode ?</p>
 				</section>
 
-				<section>
 					<section>
 						<h2>Les preload scanners (... IE8 !)</h2>
 						<p>HTMLPreloadScanner et CSSPreloadScanner</p>
@@ -451,8 +450,8 @@
 
 						<p><small>Blink : multi-threaded PreloadScanner architecture pour pas utiliser la main thread de HTMLPreloadScanner (par ex pour évaluer MQ à part)</small></p>
 <small>DONE https://codereview.chromium.org/201813002/</small>
-					
 					</section>
+
 					<section>
 						<p>Pourquoi ne pas 'simplement' multithreader ? Les CPU mobiles ont plusieurs cores après tout</p>
 						<p>tl;dr : parce que c'est -vraiment- compliqué</p>
@@ -468,8 +467,9 @@
 						<p>tl;dr : un seul tuyau réseau pour précharger toutes les ressources au lieu de petits tuyaux multiples</p>
 						<p>utile pour les mauvaises connexions réseau</p>
 					</section>
+
 					<section>
-						pause
+						pause chocolatine
 					</section>
 
 					<section>
