--- a/laurentperez.fr/talks/webkit/index.html
+++ b/laurentperez.fr/talks/webkit/index.html
@@ -18,6 +18,11 @@
 		link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
 		document.getElementsByTagName( 'head' )[0].appendChild( link );
 	</script>
+	<style>
+	.reveal section p {
+    font-size: 1em !important;
+	}
+</style>
 
 	<!-- rv v1 
 	<link rel="stylesheet" href="css/reveal.min.css">
